fixed layout on mobile

--- a/src/styles/core.css
+++ b/src/styles/core.css
@@ -9,7 +9,7 @@
   min-height: 100%;
 }
 
-@media (max-width: 520px) {
+@media (max-width: 400px) {
   :root {
     font-size: 16px;
   }
